2012-06-06  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Fix dist path in multi Solr install script

2012-05-09  Stefan Sprenger  <stefan.sprenger@dkd.de>

	* Add install script for multiple Solr versions

2012-04-23  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed a bug that caused the the magic __solr_index_language record field to be empty for the default language when indexing records
	* Fixed an issue that caused URLs for records to be generated without realurl

2012-03-28  Ingo Renner  <ingo.renner@dkd.de>

	* Release of v2.1.0

	* Fixed bug #35031: Duplicate index entries if records are moved to another PID
	* Added an option to add arbitrary headers to Index Queue page indexer request
	* Added a report to check for allow_url_fopen to be enabled
	* Added a report to detect PHP versions with buggy filter_var() function
	* Removed storing the cHash in the index, dynamic pages are not indexed anyway
	* Fixed bug #25911: Exception in Draft Workspace when editing content, credits Michael Voehringer
	* Added example Index Queue configuration for EXT:news
	* Added logging of detected fe access groups
	* Fixed an issue with recursively reading the pages in a tree affecting initialization of Mount Pages in the Index Queue
	* Fixed an issue with Mount Page Index Queue initialization causing the actual (mounted) pages to be marked as pages being mounted while they are not
	* Fixed an issue that caused to accept invalid page types into the Index Queue when initializing Mount Pages
	* Added feature #35047: Support content_fallback mode, credits Stefan Galinski
	* Added feature #35191: Include locallang from file path starting with FILE:
	* Fixed EXT:news Index Queue configuration to use SOLR_CONTENT to clean up content from markup

2012-03-27  Ingo Renner  <ingo.renner@dkd.de>

	* Fixed bug #35242: Class 'tx_solr_fileindexer_Queue' not found in Reindexer Scheduler Task